--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,8 @@ okhttp = "4.12.0"
 retrofit = "2.9.0"
 spotless = "7.0.4"
 androidxHiltNavigationCompose = "1.2.0"
+mockk = "1.14.5"
+coroutines = "1.10.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -45,6 +47,8 @@ okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.
 okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = {module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit"}
 gson-converter = {module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit"}
+mockk = {module = "io.mockk:mockk", version.ref = "mockk"}
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
